Quad view lock view problem... #38472

Closed
opened 2014-02-04 05:09:35 +01:00 by Angel Pat · 8 comments

System Information
Windows 7, GTX 590

Blender Version
Broken: (since I can remember, > Blender 2.64 )
Worked: None?

Short description of error

Exact steps for others to reproduce the error
Simple, just change to Quad view, disable lock view and move any orthographic view and change it to perspective, now enable Lock view and you can´t move your new perspective view, and the lock toggle says: "Lock view rotation in side views", nothing about perpective view. here is a screenshot of what's happening with some notes....
http://i905.photobucket.com/albums/ac256/valcar3d/QuadViewLockproblem_zpsdb762eb3.jpg

**System Information** Windows 7, GTX 590 **Blender Version** Broken: (since I can remember, > Blender 2.64 ) Worked: None? **Short description of error** **Exact steps for others to reproduce the error** Simple, just change to Quad view, disable lock view and move any orthographic view and change it to perspective, now enable Lock view and you can´t move your new perspective view, and the lock toggle says: "Lock view rotation in side views", nothing about perpective view. here is a screenshot of what's happening with some notes.... http://i905.photobucket.com/albums/ac256/valcar3d/QuadViewLockproblem_zpsdb762eb3.jpg
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AngelPat

Added subscriber: @AngelPat

This issue was referenced by blender/blender-addons-contrib@bb36037c15

This issue was referenced by blender/blender-addons-contrib@bb36037c1561c3c3d7a61fac885b01408201fe0e

This issue was referenced by bb36037c15

This issue was referenced by bb36037c1561c3c3d7a61fac885b01408201fe0e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bb36037c15.

Closed by commit bb36037c15.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note that while orbiting and dolly now work, this is a bit of an odd case, the view is locked - so key commands (FKeys to oribit) will still go to the unlocked view.

basically it works but only in a limited way...

An alternative fix could be that any 'User' views are...

  • Not considered locked when enabling the lock button.
  • Locked and changed so they revert back to top/left/right/botton... etc views.
Note that while orbiting and dolly now work, this is a bit of an odd case, the view is locked - so key commands (FKeys to oribit) will still go to the unlocked view. basically it works but only in a limited way... An alternative fix could be that any 'User' views are... - Not considered locked when enabling the lock button. - Locked and changed so they revert back to top/left/right/botton... etc views.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38472
No description provided.