Fix T38472: allow orbiting locked view when they are already 'user'.